integrate activation 2.0.0-RC3 (#144)
* integrate activation 2.0.0-RC3

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>